module/make.out
./make.sh ""
make[1]: Entering directory '/home/aosv/LinuxFibers/module/build'
make  -C /lib/modules/4.18.0-15-generic/build/ M=/home/aosv/LinuxFibers/module/build modules
make[2]: Entering directory '/usr/src/linux-headers-4.18.0-15-generic'
Makefile:970: "Cannot use CONFIG_STACK_VALIDATION=y, please install libelf-dev, libelf-devel or elfutils-libelf-devel"
  CC [M]  /home/aosv/LinuxFibers/module/build/../src/fibers.o
/home/aosv/LinuxFibers/module/build/../src/fibers.c: In function ‘kernelConvertThreadToFiber’:
/home/aosv/LinuxFibers/module/build/../src/fibers.c:97:5: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
     struct thread *t;
     ^~~~~~
In file included from ./include/linux/init.h:5,
                 from /home/aosv/LinuxFibers/module/build/../include/common.h:4,
                 from /home/aosv/LinuxFibers/module/build/../include/fibers.h:1,
                 from /home/aosv/LinuxFibers/module/build/../src/fibers.c:1:
/home/aosv/LinuxFibers/module/build/../src/fibers.c: In function ‘kernelCreateFiber’:
./include/linux/rculist.h:611:11: error: dereferencing pointer to incomplete type ‘struct threads’
    typeof(*(pos)), member);   \
           ^~~~~~
./include/linux/compiler.h:316:19: note: in definition of macro ‘__compiletime_assert’
   bool __cond = !(condition);    \
                   ^~~~~~~~~
./include/linux/compiler.h:339:2: note: in expansion of macro ‘_compiletime_assert’
  _compiletime_assert(condition, msg, __compiletime_assert_, __LINE__)
  ^~~~~~~~~~~~~~~~~~~
./include/linux/build_bug.h:45:37: note: in expansion of macro ‘compiletime_assert’
 #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
                                     ^~~~~~~~~~~~~~~~~~
./include/linux/kernel.h:996:2: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
  ^~~~~~~~~~~~~~~~
./include/linux/kernel.h:996:20: note: in expansion of macro ‘__same_type’
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
                    ^~~~~~~~~~~
./include/linux/list.h:734:40: note: in expansion of macro ‘container_of’
 #define hlist_entry(ptr, type, member) container_of(ptr,type,member)
                                        ^~~~~~~~~~~~
./include/linux/list.h:745:15: note: in expansion of macro ‘hlist_entry’
     ____ptr ? hlist_entry(____ptr, type, member) : NULL; \
               ^~~~~~~~~~~
./include/linux/rculist.h:610:13: note: in expansion of macro ‘hlist_entry_safe’
  for (pos = hlist_entry_safe (rcu_dereference_raw(hlist_first_rcu(head)),\
             ^~~~~~~~~~~~~~~~
./include/linux/hashtable.h:177:2: note: in expansion of macro ‘hlist_for_each_entry_rcu’
  hlist_for_each_entry_rcu(obj, &name[hash_min(key, HASH_BITS(name))],\
  ^~~~~~~~~~~~~~~~~~~~~~~~
/home/aosv/LinuxFibers/module/build/../src/fibers.c:143:5: note: in expansion of macro ‘hash_for_each_possible_rcu’
     hash_for_each_possible_rcu(p->threads, t, tnext,pid){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/aosv/LinuxFibers/module/build/../include/common.h:6,
                 from /home/aosv/LinuxFibers/module/build/../include/fibers.h:1,
                 from /home/aosv/LinuxFibers/module/build/../src/fibers.c:1:
./include/linux/kernel.h:995:17: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
  void *__mptr = (void *)(ptr);     \
                 ^
./include/linux/list.h:734:40: note: in expansion of macro ‘container_of’
 #define hlist_entry(ptr, type, member) container_of(ptr,type,member)
                                        ^~~~~~~~~~~~
./include/linux/list.h:745:15: note: in expansion of macro ‘hlist_entry’
     ____ptr ? hlist_entry(____ptr, type, member) : NULL; \
               ^~~~~~~~~~~
./include/linux/rculist.h:613:9: note: in expansion of macro ‘hlist_entry_safe’
   pos = hlist_entry_safe(rcu_dereference_raw(hlist_next_rcu(\
         ^~~~~~~~~~~~~~~~
./include/linux/hashtable.h:177:2: note: in expansion of macro ‘hlist_for_each_entry_rcu’
  hlist_for_each_entry_rcu(obj, &name[hash_min(key, HASH_BITS(name))],\
  ^~~~~~~~~~~~~~~~~~~~~~~~
/home/aosv/LinuxFibers/module/build/../src/fibers.c:143:5: note: in expansion of macro ‘hash_for_each_possible_rcu’
     hash_for_each_possible_rcu(p->threads, t, tnext,pid){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ./include/linux/init.h:5,
                 from /home/aosv/LinuxFibers/module/build/../include/common.h:4,
                 from /home/aosv/LinuxFibers/module/build/../include/fibers.h:1,
                 from /home/aosv/LinuxFibers/module/build/../src/fibers.c:1:
./include/linux/kernel.h:996:32: error: invalid type argument of unary ‘*’ (have ‘int’)
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
                                ^~~~~~
./include/linux/compiler.h:316:19: note: in definition of macro ‘__compiletime_assert’
   bool __cond = !(condition);    \
                   ^~~~~~~~~
./include/linux/compiler.h:339:2: note: in expansion of macro ‘_compiletime_assert’
  _compiletime_assert(condition, msg, __compiletime_assert_, __LINE__)
  ^~~~~~~~~~~~~~~~~~~
./include/linux/build_bug.h:45:37: note: in expansion of macro ‘compiletime_assert’
 #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
                                     ^~~~~~~~~~~~~~~~~~
./include/linux/kernel.h:996:2: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
  ^~~~~~~~~~~~~~~~
./include/linux/kernel.h:996:20: note: in expansion of macro ‘__same_type’
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
                    ^~~~~~~~~~~
./include/linux/list.h:734:40: note: in expansion of macro ‘container_of’
 #define hlist_entry(ptr, type, member) container_of(ptr,type,member)
                                        ^~~~~~~~~~~~
./include/linux/list.h:745:15: note: in expansion of macro ‘hlist_entry’
     ____ptr ? hlist_entry(____ptr, type, member) : NULL; \
               ^~~~~~~~~~~
./include/linux/rculist.h:613:9: note: in expansion of macro ‘hlist_entry_safe’
   pos = hlist_entry_safe(rcu_dereference_raw(hlist_next_rcu(\
         ^~~~~~~~~~~~~~~~
./include/linux/hashtable.h:177:2: note: in expansion of macro ‘hlist_for_each_entry_rcu’
  hlist_for_each_entry_rcu(obj, &name[hash_min(key, HASH_BITS(name))],\
  ^~~~~~~~~~~~~~~~~~~~~~~~
/home/aosv/LinuxFibers/module/build/../src/fibers.c:143:5: note: in expansion of macro ‘hash_for_each_possible_rcu’
     hash_for_each_possible_rcu(p->threads, t, tnext,pid){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~
./include/linux/kernel.h:997:18: error: invalid type argument of unary ‘*’ (have ‘int’)
     !__same_type(*(ptr), void),   \
                  ^~~~~~
./include/linux/compiler.h:316:19: note: in definition of macro ‘__compiletime_assert’
   bool __cond = !(condition);    \
                   ^~~~~~~~~
./include/linux/compiler.h:339:2: note: in expansion of macro ‘_compiletime_assert’
  _compiletime_assert(condition, msg, __compiletime_assert_, __LINE__)
  ^~~~~~~~~~~~~~~~~~~
./include/linux/build_bug.h:45:37: note: in expansion of macro ‘compiletime_assert’
 #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
                                     ^~~~~~~~~~~~~~~~~~
./include/linux/kernel.h:996:2: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
  BUILD_BUG_ON_MSG(!__same_type(*(ptr), ((type *)0)->member) && \
  ^~~~~~~~~~~~~~~~
./include/linux/kernel.h:997:6: note: in expansion of macro ‘__same_type’
     !__same_type(*(ptr), void),   \
      ^~~~~~~~~~~
./include/linux/list.h:734:40: note: in expansion of macro ‘container_of’
 #define hlist_entry(ptr, type, member) container_of(ptr,type,member)
                                        ^~~~~~~~~~~~
./include/linux/list.h:745:15: note: in expansion of macro ‘hlist_entry’
     ____ptr ? hlist_entry(____ptr, type, member) : NULL; \
               ^~~~~~~~~~~
./include/linux/rculist.h:613:9: note: in expansion of macro ‘hlist_entry_safe’
   pos = hlist_entry_safe(rcu_dereference_raw(hlist_next_rcu(\
         ^~~~~~~~~~~~~~~~
./include/linux/hashtable.h:177:2: note: in expansion of macro ‘hlist_for_each_entry_rcu’
  hlist_for_each_entry_rcu(obj, &name[hash_min(key, HASH_BITS(name))],\
  ^~~~~~~~~~~~~~~~~~~~~~~~
/home/aosv/LinuxFibers/module/build/../src/fibers.c:143:5: note: in expansion of macro ‘hash_for_each_possible_rcu’
     hash_for_each_possible_rcu(p->threads, t, tnext,pid){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [scripts/Makefile.build:327: /home/aosv/LinuxFibers/module/build/../src/fibers.o] Error 1
make[2]: *** [Makefile:1534: _module_/home/aosv/LinuxFibers/module/build] Error 2
make[2]: Leaving directory '/usr/src/linux-headers-4.18.0-15-generic'
make[1]: *** [Makefile:7: all] Error 2
make[1]: Leaving directory '/home/aosv/LinuxFibers/module/build'
